--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,55 @@
   @media screen and (min-width: 999px) {
     /* Agregar botón para mostrar/ocultar menú */
     
+    .heroes-carousel {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      overflow: hidden;
+      margin-top: 50px;
+    }
+    
+    .carousel-container {
+      display: flex;
+      flex-wrap: nowrap;
+      width: fit-content; /* Ajustar el ancho del contenedor al contenido */
+      margin: 0 auto;
+    }
+    
+    .carousel-slide {
+      display: flex;
+      flex-wrap: nowrap;
+      transition: transform 0.5s ease-in-out;
+    }
+    
+    .carousel-slide img {
+      width: 100%;
+      height: auto;
+    }
+    
+    .carousel-prev,
+    .carousel-next {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 30px;
+      font-weight: bold;
+      color: white;
+      cursor: pointer;
+      z-index: 1;
+    }
+    
+    .carousel-prev {
+      left: 0;
+    }
+    
+    .carousel-next {
+      right: 0;
+    }
+    
+    
+
     .hero-description h2 {
       font-size: 48px;
       font-weight: bold;
@@ -229,16 +278,6 @@
     align-items: center;
     margin-top: 30px;
   }
-  .hero-image {
-    flex: 1;
-    display: flex;
-    position: relative;
-    justify-content: flex-end;
-    align-items: flex-end;
-    height: 100%;
-    order: 2; /* el elemento aparecerá primero en el orden */
-    
-  }
   .buttons-container .btn {
     font-size: 18px;
     font-weight: bold;
@@ -262,16 +301,6 @@
     flex: 1;
     order: 1; /* el elemento aparecerá después en el orden */
   }
-  
-  .hero-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-
-  
   .buttons-container .btn:hover {
     background-color: #aa8623;
   }
